# speed_scalper

./: .env.example  .gitignore  Makefile  account.py  common.py  fed_logger.py  helper.py  main.py  orderbook.py  pyproject.toml  trade.py
config/: adspread.json  basic_scalper.json
helper/: trade_tracker.py
strategy/: adspread.py  adspread2.py  basic_scalp.md  basic_scalpe.py  strategy.py
techan/: price_buffer.py
tests/: conftest.py  test_account.py  test_common.py
